Added SDK and mailing list endpoint
